[package]
name = "omoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
tokio = { version = "1.23.0", features = ["full"] }
