[package]
name = "omoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
dhcproto = { version = "0.8.0", features = ["serde"] }
tokio = { version = "1.23.0", features = ["full"] }
