[package]
name = "omoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.60"
axum = "0.6.1"
bincode = "1.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
dhcproto = { version = "0.8.0", features = ["serde"] }
ipnet = "2.7.0"
mac_address = { version = "1.1.4", features = ["serde"] }
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
